# Sample-for-Embedded-Development-Study

./: .gitignore  README.md  platformio.ini
.github/: copilot-instructions.md
docs/: specifications.md  wiring_diagram.md
examples/: basic_test.cpp
src/: StrikeSystem.cpp  StrikeSystem.h  config.h  main.cpp
test/: CMakeLists.txt  Makefile  README.md  run_tests.ps1  test_main.cpp
test/integration/: test_system_integration.cpp
test/mocks/: mock_arduino.cpp  mock_arduino.h
test/unit/: test_led_effects.cpp  test_servo_control.cpp  test_sound_effects.cpp  test_strike_system.cpp
